--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-iot-device-sdk": "^1.0.12",
-    "aws-sdk": "^2.6.7"
+    "aws-sdk": "^2.6.7",
+    "rcswitch-gpiomem": "^0.3.1"
   }
 }
