--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-iot-device-sdk": "^1.0.12",
     "aws-sdk": "^2.6.7",
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "rcswitch-gpiomem": "^0.3.1"
   }
