--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.6.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "mqtt": "^2.4.0",
     "rcswitch-gpiomem": "^0.3.1"
   }
 }
